<resources>
    <string name="app_name">TODO</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description">Description</string>
    <string name="add">Add</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="done">Done</string>
</resources>
